--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hotstar Watermark Remover</title>
+  <title>Hotstar Remover</title>
 </head>
 
 <body>
+  <h1>Hotstar Enhancer</h1>
 </body>
 
 </html>
